Remove unneeded code and tidy up