@@ -431,7 +431,7 @@ public class EventsFacade extends AbstractIsaacFacade {
             .toResponse();
       }
 
-      return Response.ok(ImmutableMap.of("count", bookingManager.getCountOfEventBookings())).build();
+      return Response.ok(Map.of("count", bookingManager.getCountOfEventBookings())).build();
     } catch (NoUserLoggedInException e) {
       return SegueErrorResponse.getNotLoggedInResponse();
     } catch (SegueDatabaseException e) {
@@ -481,7 +481,6 @@ public class EventsFacade extends AbstractIsaacFacade {
    * @param request               - so we can determine if the user is logged in
    * @param eventId               - event booking containing updates, must contain primary id.
    * @param userId                - the user to be promoted.
-   * @param additionalInformation - additional information to be stored with this booking e.g. dietary requirements.
    * @return the updated booking.
    */
   @POST
@@ -491,8 +490,7 @@ public class EventsFacade extends AbstractIsaacFacade {
   @Operation(summary = "Move a user from an event waiting list, reservation or cancellation to a confirmed booking.")
   public final Response promoteBooking(@Context final HttpServletRequest request,
                                        @PathParam("event_id") final String eventId,
-                                       @PathParam("user_id") final Long userId,
-                                       final Map<String, String> additionalInformation) {
+                                       @PathParam("user_id") final Long userId) {
     try {
       RegisteredUserDTO currentUser = this.userManager.getCurrentRegisteredUser(request);
       RegisteredUserDTO userOfInterest = this.userManager.getUserDTOById(userId);
@@ -506,7 +504,7 @@ public class EventsFacade extends AbstractIsaacFacade {
           = this.bookingManager.promoteToConfirmedBooking(event, userOfInterest);
 
       this.getLogManager().logEvent(currentUser, request,
-          SegueServerLogType.ADMIN_EVENT_WAITING_LIST_PROMOTION, ImmutableMap.of(EVENT_ID_FKEY_FIELDNAME, event.getId(),
+          SegueServerLogType.ADMIN_EVENT_WAITING_LIST_PROMOTION, Map.of(EVENT_ID_FKEY_FIELDNAME, event.getId(),
               USER_ID_FKEY_FIELDNAME, userId));
       return Response.ok(eventBookingDTO).build();
     } catch (NoUserLoggedInException e) {
@@ -840,7 +838,7 @@ public class EventsFacade extends AbstractIsaacFacade {
           bookingManager.createBookingOrAddToWaitingList(event, bookedUser, additionalInformation);
       this.getLogManager().logEvent(currentUser, request,
           SegueServerLogType.ADMIN_EVENT_BOOKING_CREATED,
-          ImmutableMap.of(
+          Map.of(
               EVENT_ID_FKEY_FIELDNAME, event.getId(),
               USER_ID_FKEY_FIELDNAME, userId,
               BOOKING_STATUS_FIELDNAME, booking.getBookingStatus().toString(),
@@ -924,7 +922,7 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       this.getLogManager().logEvent(reservingUser, request,
           SegueServerLogType.EVENT_RESERVATIONS_CREATED,
-          ImmutableMap.of(
+          Map.of(
               EVENT_ID_FKEY_FIELDNAME, event.getId(),
               USER_ID_FKEY_FIELDNAME, reservingUser.getId(),
               USER_ID_LIST_FKEY_FIELDNAME, userIds.toArray(),
@@ -1018,7 +1016,7 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       this.getLogManager().logEvent(userLoggedIn, request,
           SegueServerLogType.EVENT_RESERVATIONS_CANCELLED,
-          ImmutableMap.of(
+          Map.of(
               EVENT_ID_FKEY_FIELDNAME, event.getId(),
               USER_ID_FKEY_FIELDNAME, userLoggedIn.getId(),
               USER_ID_LIST_FKEY_FIELDNAME, validUsers.stream().map(RegisteredUserDTO::getId).toArray(),
@@ -1087,7 +1085,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       EventBookingDTO eventBookingDTO = bookingManager.requestBooking(event, user, additionalInformation);
 
       this.getLogManager().logEvent(userManager.getCurrentUser(request), request,
-          SegueServerLogType.EVENT_BOOKING, ImmutableMap.of(EVENT_ID_FKEY_FIELDNAME, event.getId()));
+          SegueServerLogType.EVENT_BOOKING, Map.of(EVENT_ID_FKEY_FIELDNAME, event.getId()));
 
       return Response.ok(this.mapper.map(eventBookingDTO, EventBookingDTO.class)).build();
     } catch (NoUserLoggedInException e) {
@@ -1145,7 +1143,7 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       EventBookingDTO eventBookingDTO = bookingManager.requestWaitingListBooking(event, user, additionalInformation);
       this.getLogManager().logEvent(userManager.getCurrentUser(request), request,
-          SegueServerLogType.EVENT_WAITING_LIST_BOOKING, ImmutableMap.of(EVENT_ID_FKEY_FIELDNAME, event.getId()));
+          SegueServerLogType.EVENT_WAITING_LIST_BOOKING, Map.of(EVENT_ID_FKEY_FIELDNAME, event.getId()));
 
       return Response.ok(this.mapper.map(eventBookingDTO, EventBookingDTO.class)).build();
     } catch (NoUserLoggedInException e) {
@@ -1250,11 +1248,11 @@ public class EventsFacade extends AbstractIsaacFacade {
 
       if (!userOwningBooking.equals(userLoggedIn)) {
         this.getLogManager().logEvent(userLoggedIn, request,
-            SegueServerLogType.ADMIN_EVENT_BOOKING_CANCELLED, ImmutableMap.of(
+            SegueServerLogType.ADMIN_EVENT_BOOKING_CANCELLED, Map.of(
                 EVENT_ID_FKEY_FIELDNAME, event.getId(), USER_ID_FKEY_FIELDNAME, userOwningBooking.getId()));
       } else {
         this.getLogManager().logEvent(userLoggedIn, request,
-            SegueServerLogType.EVENT_BOOKING_CANCELLED, ImmutableMap.of(EVENT_ID_FKEY_FIELDNAME, event.getId()));
+            SegueServerLogType.EVENT_BOOKING_CANCELLED, Map.of(EVENT_ID_FKEY_FIELDNAME, event.getId()));
       }
 
       return Response.noContent().build();
@@ -1358,7 +1356,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       bookingManager.deleteBooking(event, user);
 
       this.getLogManager().logEvent(currentUser, request, SegueServerLogType.ADMIN_EVENT_BOOKING_DELETED,
-          ImmutableMap.of(EVENT_ID_FKEY_FIELDNAME, eventId, USER_ID_FKEY_FIELDNAME, userId));
+          Map.of(EVENT_ID_FKEY_FIELDNAME, eventId, USER_ID_FKEY_FIELDNAME, userId));
 
       return Response.noContent().build();
     } catch (NoUserLoggedInException e) {
@@ -1406,7 +1404,7 @@ public class EventsFacade extends AbstractIsaacFacade {
       EventBookingDTO eventBookingDTO = this.bookingManager.recordAttendance(event, userOfInterest, attended);
       this.getLogManager().logEvent(currentUser, request,
           SegueServerLogType.ADMIN_EVENT_ATTENDANCE_RECORDED,
-          ImmutableMap.of(
+          Map.of(
               EVENT_ID_FKEY_FIELDNAME, event.getId(),
               USER_ID_FKEY_FIELDNAME, userId,
               ATTENDED_FIELDNAME, attended,
